# faster-whisper

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  RELEASING.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  npm-publish.yml
scripts/: build-native.js  fetch-test-model.js  smoke-test.sh
src/: audio.ts  feature_extractor.ts  index.ts  runtime_paths.ts  tokenizer.ts  transcribe.ts  vad.ts  whisper.ts
tests/: helpers.ts  test_audio.ts  test_bridge.ts  test_feature_extractor.ts  test_parity_matrix.ts  test_tokenizer.ts  test_transcribe.ts  test_vad.ts
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: feature_extractor.ts  test.ts  test_audio.ts  test_feature_extractor.ts  test_tokenizer.ts  test_transcribe.ts  test_vad.ts  tokenizer.ts  transcribe.ts  vad.ts  whisper.ts
ts/whisper_bridge/: CMakeLists.txt  bridge.h
whisper_bridge/: CMakeLists.txt  bridge.cpp  bridge.h
whisper_bridge/lib/: libctranslate2.so.4  libctranslate2.so.4.7.1
